@@ -1,3 +1,8 @@
+Fri Jul  2 22:41:27 2004  Matthias Clasen  <maclas@gmx.de>
+
+	* gtk/gtkimage.c (gtk_image_expose): Properly align mask and
+	pixbuf if a subarea is exposed.  (#135423, fix by John Ehresman)
+
 2004-07-01  J. Ali Harlow  <ali@juiblex.co.uk>
 
 	* gdk/win32/gdkinput-win32.c (_gdk_input_ungrab_pointer): Fix
